Общие обновления, я забыл их добавлять по отдельности

--- a/Website/Views/Authenticate/ConfirmMail.cshtml
+++ b/Website/Views/Authenticate/ConfirmMail.cshtml
@@ -1,4 +1,4 @@
-﻿@model Website.ViewModels.Base.ConfirmMailViewModel
+﻿@model Website.ViewModels.ConfirmMailViewModel
 @{
     Layout = null;
     string title = "Регистрация";
