--- a/Website/Views/Authenticate/AuthWarning.cshtml
+++ b/Website/Views/Authenticate/AuthWarning.cshtml
@@ -3,5 +3,5 @@
 }
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap">
 <div id="page_modal_wrap" class="modal_container">
-    @await Html.PartialAsync("~/Views/Modals/AuthenticateWarning.cshtml")
+    @Html.Partial("~/Views/Modals/AuthenticateWarning.cshtml")
 </div>
