--- a/Website/Views/Modals/AuthenticateWarning.cshtml
+++ b/Website/Views/Modals/AuthenticateWarning.cshtml
@@ -4,6 +4,9 @@
     .bg {
         background: #e3e3e3;
     }
+    body {
+        margin: 0;
+    }
 </style>
 <div class="modal_background bg">
 </div>
@@ -15,6 +18,8 @@
     <a class="modal_button-link" href="/about/">О нас</a>
 </div>
 
-
 <script src="~/Resources/js/modal.js"></script>
 <script src="~/Resources/js/neumorphism.js"></script>
+<script>
+    showModal('page_modal_wrap');
+</script>
