--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="page_wrap">
-        <div id="x" class="modal_container">
+        <div id="page_modal_wrap" class="modal_container">
             @*@if (Model is ProfileViewModel { IsNew: true })
                 {
                     @await Html.PartialAsync("~/Views/Modals/GreetingModal.cshtml")
