--- a/Website/wwwroot/Resources/css/post.css
+++ b/Website/wwwroot/Resources/css/post.css
@@ -14,6 +14,7 @@
         margin-top: 0;
     }
 .post_header {
+    width:min-content;
     display: flex;
     gap: 10px;
     align-items: baseline;
@@ -22,6 +23,7 @@
     box-sizing: border-box;
 }
 .post_owner a{
+    white-space:nowrap;
     text-decoration: none;
 }
 .post_owner a:hover {
@@ -44,16 +46,43 @@
 .post_title {
     margin-bottom: 6px;
 }
+.post:hover .post_quick_menu {
+    opacity: .5;
+    top: 10px;
+}
 .post_quick_menu {
-    height: 20px;
-    background: gray;
-    margin: auto 0 auto auto;
+    /*height: 20px;*/
+    /*border: 1px gray solid;*/
+    /*margin: auto 0 auto auto;*/
+
+    position: absolute;
+    right: 10px;
+    top: 0px;
     display: flex;
     gap: 10px;
-    overflow: visible;
+    transition: .2s linear;
+    opacity:0;
+    /*overflow: visible;*/
 }
 .quick_btn {
     height: 20px;
     width: 20px;
-    background: darkcyan;
+    cursor: pointer;
+}
+.quick_btn:hover{
+
+}
+.quick_btn:hover .quick_btn_icon{
+    fill: rgb(30,30,30);
+}
+.quick_btn_icon {
+    fill: rgb(140,140,140);
+}
+.quick_btn_icon svg{
+    overflow: visible;
+    vertical-align: inherit;
+}
+.hidden{
+    visibility: collapse;
+    opacity:0;
 }
