--- a/Website/Views/Modals/CreatePostModalForm.cshtml
+++ b/Website/Views/Modals/CreatePostModalForm.cshtml
@@ -1,6 +1,8 @@
 ﻿@model Website.ViewModels.Profile.PostViewModel
 @{  
-    Layout = null;      
+    Layout = null;
+    bool isEditing = Model.OwnerId != 0 && Model.Id != 0;
+    string title = !isEditing ? "Создать новый пост" : "Отредактировать пост";
 }
 <div class="modal_background close-modal">
 </div>
@@ -9,14 +11,22 @@
         <i class='bx bx-x'></i>
     </div>
 
-    <h1 class="modal_title">Создать новый пост</h1>
+    <h1 class="modal_title">@title</h1>
     <p class="modal_description">Введите параметры</p>
-    
     <input asp-for="Title" placeholder="Заголовок" />
     <textarea asp-for="Description" placeholder="Текст"></textarea>
-    <input id="create_post_btn" class="modal_button" type="submit" value="Создать"/>
+    @if (!isEditing)
+    {
+        <input id="create_post_btn" class="modal_button" type="submit" value="Создать" />
+    }
+    else
+    {
+        <input type="hidden" asp-for="OwnerId" />
+        <input type="hidden" asp-for="Id" />
+        <input id="edit_post_btn" class="modal_button" type="submit" value="Отредактировать" />
+    }
     @*<div class="modal_button-link close-modal">
-        Закрыть
-    </div>*@
+            Закрыть
+        </div>*@
 </div>
 
