--- a/Website/Views/Messenger/Chats.cshtml
+++ b/Website/Views/Messenger/Chats.cshtml
@@ -1,4 +1,4 @@
-﻿@model Website.ViewModels.DialogsViewModel
+﻿@model Website.ViewModels.ChatsViewModel
 <link rel="stylesheet" href="~/Resources/css/dialogs.css" />
 
 <ul>
