--- a/Website/Views/Messenger/GroupChat/GroupChatParticipantMessage.cshtml
+++ b/Website/Views/Messenger/GroupChat/GroupChatParticipantMessage.cshtml
@@ -10,6 +10,6 @@
         @Model.Text
     </div>
     <div class="message-sent-time">
-        @Model.SentDateTime
+        @Model.CreatedDateTime
     </div>
 </li>
