--- a/Website/Views/Profile/PostView.cshtml
+++ b/Website/Views/Profile/PostView.cshtml
@@ -48,7 +48,7 @@
         @Model.Description
     </div>
     <div class="post_time">
-        @Convert(Model.CreationDateTime)
+        @Convert(Model.CreatedDateTime)
     </div>
 </li>
 }
